<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="15dp"
        android:padding="0dp" >

        <Button
            android:id="@+id/button_renew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/button_undo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:text="@string/undo" />
    </LinearLayout>

    <TextView
        android:id="@+id/infoBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:drawablePadding="15dp"
        android:drawableRight="@drawable/blue_disc"
        android:gravity="center_vertical"
        android:text="@string/next"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" >

    </TextView>

    <com.threewisedroids.superc4.GameView
        android:id="@+id/gameView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayout2"
        android:layout_below="@id/infoBox"
        android:layout_centerHorizontal="true"
        true="" />

</RelativeLayout>